# artie

./: .flake8  .gitignore  Artie Scraper.sh  README.md  app.spec  config.json  mux_lang.ini  mux_launch.sh  pyproject.toml  requirements.txt
.github/: funding.yml
.github/workflows/: buildman.yml  lint.yml  main.yml  release.yml
src/: app.py  backup.py  cache_manager.py  config_manager.py  defaults.py  exceptions.py  graphic.py  image_processor.py  input.py  logger.py  rom_manager.py  scraper.py  settings.py  systems.py  updater.py
src/api/: infrastructure_api.py  search_api.py  systems_api.py
tests/: conftest.py  test_infrastructure.py
